<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medical Assistance</string>
    <string name="emergency_case">Emergency case</string>
    
    <string name="treatment_case">Treatment case</string>
    <string name="menu_settings">Settings</string>
    <string name="date">Date</string>
    <string name="action">Action</string>
    <string name="patient_id">Patient ID: </string>
    <string name="patient_name">Patient Name: </string>
    <string name="patient_age">Patient Age: </string>
    <string name="doctor_coment">Doctor Comment:</string>

</resources>